<resources>
    <string name="app_name">Musical Stucture App</string>
    <string name="cartvalue">Add to Cart</string>
    <string name="nowplayingtitle">SBTKRT-Light song-01</string>
    <string name="nowplayingalbum">Album-SBTKRT</string>
    <string name="play_album_songs_ed_sheeran">Play Album Songs-Ed Sheeran</string>
    <string name="play_album_songs_ariana">Play Album Songs-Ariana</string>
    <string name="play_album_songs_coldplay">Play Album Songs-ColdPlay</string>
    <string name="play_album_songs_katyperry">Play Album Songs-KatyPerry</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="about_artist4">About artist</string>
    <string name="ariana_grande">Ariana Grande</string>
    <string name="about_artist1">About artist</string>
    <string name="sbtkrt">SBTKRT</string>
    <string name="about_artist2">About artist</string>
    <string name="coldplay">ColdPlay</string>
    <string name="about_artist3">About artist</string>
    <string name="katy_perry">Katy Perry</string>
    <string name="about_artist">About artist</string>
    <string name="go_to_payment_page">Go to Payment Page</string>
    <string name="items_in_your_cart">Items in your cart</string>
    <string name="_01">0</string>
    <string name="total_amount">Total Amount $</string>
    <string name="_0">0</string>
    <string name="buyalbum1">Buy Album-Everything   Ed Sheeran   Everything is the debut studio album by English singer-songwriter Ed Sheeran</string>
    <string name="add_to_cart1">Add To Cart</string>
    <string name="remove_from_cart1">Remove from cart</string>
    <string name="buyalbum2">Buy Album-Life   Ariana Grande   Grande released her second studio album Life</string>
    <string name="add_to_cart2">Add To Cart</string>
    <string name="remove_from_cart2">Remove from cart</string>
    <string name="buyalbum3">Buy Album- Soul   Katy Perry   Soul is the latest studio album from Perry, just released this past June</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="now_playing">Now Playing</string>
    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="settings">Settings</string>
    <string name="music_cart">Music Cart</string>
    <string name="play_settings">Play Settings</string>
    <string name="switch_on_to_play_songs_one_after_another_without_break">Switch ON to play songs one after another, without break</string>
    <string name="enable_disable_shuffle">Enable/Disable Shuffle</string>
    <string name="equalizer_default_on">Equalizer Default-On</string>
    <string name="general">GENERAL</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="song_01_everything_is_one_n_album_song_ed_sheeren">Song 01 Everything is One   Album song: Ed sheeren</string>
    <string name="song_02_everything_is_two_n_album_song_ed_sheeren">Song 02 Everything is Two   Album song: Ed sheeren</string>
    <string name="song_03_everything_is_three_n_album_song_ed_sheeren">Song 03 Everything is Three   Album song: Ed sheeren</string>
    <string name="song_04_everything_is_four_n_album_song_ed_sheeren">Song 04 Everything is Four   Album song: Ed sheeren</string>
    <string name="song_05_everything_is_five_n_album_song_ed_sheeren">Song 05 Everything is Five   Album song: Ed sheeren</string>
</resources>
