<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bkgnd1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        tools:context="com.example.dobry.musicalstructure.MainActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
           android:layout_weight="1"
            android:orientation="vertical">




            <TextView
                android:id="@+id/nowplaying"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:background="@color/nowplayingcolor"
                android:text="@string/now_playing"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/play1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/main"
                android:textStyle="bold" />




            <TextView
                android:id="@+id/tracks"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/trackscolor"
                android:text="@string/tracks"
                android:textAlignment="center"
                android:drawableTop="@drawable/album"
                android:textSize="@dimen/main"
                android:textStyle="bold" />







            <TextView

                android:id="@+id/artists"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:background="@color/artistscolor"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/artists"
                android:textAlignment="center"
                android:drawableTop="@drawable/artist"

                android:textSize="@dimen/main"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/albums"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/albumscolor"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/albums"
                android:textAlignment="center"
                android:drawableTop="@drawable/album"
                android:textSize="@dimen/main"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/settingscolor"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:drawableTop="@drawable/setting"
                android:textSize="@dimen/main"
                android:textStyle="bold" />




            <TextView
                android:id="@+id/cart"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/cartcolor"
                android:text="@string/music_cart"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableTop="@drawable/cart"
                android:textSize="@dimen/main"
                android:textStyle="bold" />

        </LinearLayout>





</LinearLayout>
</ScrollView>