<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bkgnd1"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:orientation="horizontal">



    <Button
        android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#e5d1e6"
        android:layout_gravity="top"
        android:text="@string/go_to_payment_page"

        android:textSize="@dimen/paymentdimen"
        />

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="80dp"
                android:textColor="@color/color1"
                android:text="@string/items_in_your_cart"
                android:textSize="@dimen/paymentdimen"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/initialcartvalue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/initialitemvalue"
                android:text="@string/_0"
                android:textColor="@color/color1"
                android:textStyle="bold"/>

            <View
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="10dp"
                android:text="@string/total_amount"
                android:textColor="@color/color1"
                android:textSize="@dimen/paymentdimen"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/initialcartprice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/initialitemvalue"
                android:textColor="@color/color1"
                android:text="@string/_0"
                android:textStyle="bold"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="140dp"
            android:background="@android:color/darker_gray" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/buyalbum1"
                android:textAlignment="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/paymentdimen"
                android:drawableLeft="@drawable/ed"
                android:drawablePadding="10dp"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:onClick="increment"
                android:text="@string/add_to_cart"

                android:textSize="@dimen/cart"
                android:textStyle="bold"/>


            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_cart"

                android:onClick="decrement"
                android:textSize="@dimen/cart"
                android:textStyle="bold"/>
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/buyalbum2"
                android:textColor="@color/color1"
                android:textAlignment="center"
                android:textSize="@dimen/paymentdimen"
                android:drawableLeft="@drawable/ariana"
                android:drawablePadding="10dp"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">



            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:onClick="increment"
                android:text="@string/add_to_cart"

                android:textSize="@dimen/cart"
                android:textStyle="bold"/>


            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_cart"

                android:onClick="decrement"
                android:textSize="@dimen/cart"
                android:textStyle="bold"/>
        </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/buyalbum3"
                android:textAlignment="center"
                android:textColor="@color/color1"
                android:textSize="@dimen/paymentdimen"
                android:drawableLeft="@drawable/katy"
                android:drawablePadding="20dp"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"

                android:onClick="increment"
                android:text="@string/add_to_cart"
                android:textSize="@dimen/cart"
                android:textStyle="bold"/>


            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_cart"

                android:onClick="decrement"
                android:textSize="@dimen/cart"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />






</LinearLayout>


    </RelativeLayout>

</ScrollView>