<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgnd1"

    tools:context=".Artist">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tophome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f5fd2f"
            android:layout_gravity="top"
            android:text="Home"
            />


        <Button
            android:id="@+id/toptracks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#e5d1e6"
            android:layout_gravity="top"
            android:text="Tracks"
            />


        <Button
            android:id="@+id/topalbum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0dc4e0"
            android:layout_gravity="top"
            android:text="Albums"
            />


        <Button
            android:id="@+id/topsettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="#00cc00"
            android:text="settings"

            />
        <Button
            android:id="@+id/topmusiccart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="#968775"
            android:text="Cart"
            />
    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ed"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/artistcolor"
        android:text="@string/ed_sheeran"
        android:textSize="@dimen/artistdimen"
        android:textStyle="bold"
        android:layout_weight="1"
     />
        <Button
            android:id="@+id/ed"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="#b0bb1e"
            android:text="@string/about_artist"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ariana"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/artistcolor"
        android:text="@string/ariana_grande"
        android:textSize="@dimen/artistdimen"
        android:textStyle="bold"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/ariana"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/artistcolor"

            android:text="@string/about_artist"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/sbt"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/artistcolor"
        android:text="@string/sbtkrt"
        android:textSize="@dimen/artistdimen"
        android:textStyle="bold"
        android:layout_weight="1"
        />
        <Button
            android:id="@+id/SBT"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/artistcolor"
            android:text="@string/about_artist"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/coldplay"
        android:textColor="@color/artistcolor"
        android:textSize="@dimen/artistdimen"
        android:textStyle="bold"
        android:layout_weight="1"
        android:drawableLeft="@drawable/coldplay"
        android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/cold"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/artistcolor"
            android:text="@string/about_artist"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/katy_perry"
        android:textColor="@color/artistcolor"
        android:textSize="@dimen/artistdimen"
        android:textStyle="bold"
        android:layout_weight="1"
        android:drawableLeft="@drawable/katy"
        android:drawablePadding="10dp"/>


        <Button
            android:id="@+id/katy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/artistcolor"
            android:text="@string/about_artist"/>

    </LinearLayout>



    </LinearLayout>



</ScrollView>