<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgnd1"
    tools:context=".Tracks">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tophome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f5fd2f"
            android:layout_gravity="top"
            android:text="Home"
            />




        <Button
            android:id="@+id/topalbum"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0dc4e0"
            android:layout_gravity="top"
            android:text="Albums"
            />

        <Button
            android:id="@+id/topartist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#b0b0ce"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:text="Artists"


            />

        <Button
            android:id="@+id/topsettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="#00cc00"
            android:text="settings"

            />
        <Button
            android:id="@+id/topmusiccart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="#968775"
            android:text="Cart"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/trk1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/song_01_everything_is_one_n_album_song_ed_sheeren"
            android:textColor="@color/color1"
            android:textSize="@dimen/track1"
            android:layout_marginTop="80dp"
            android:drawableRight="@drawable/play1"
            android:layout_marginLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ed1"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/trk2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/song_02_everything_is_two_n_album_song_ed_sheeren"
            android:textColor="@color/color1"
            android:textSize="@dimen/track1"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/play1"
            android:layout_marginLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ed1"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/trk3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/song_03_everything_is_three_n_album_song_ed_sheeren"
            android:textColor="@color/color1"
            android:textSize="@dimen/track1"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/play1"
            android:layout_marginLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ed1"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/trk4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/song_04_everything_is_four_n_album_song_ed_sheeren"
            android:textColor="@color/color1"
            android:textSize="@dimen/track1"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/play1"
            android:layout_marginLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ed1"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/trk5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/song_05_everything_is_five_n_album_song_ed_sheeren"
            android:textColor="@color/color1"
            android:textSize="@dimen/track1"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/play1"
            android:layout_marginLeft="15dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ed1"

            />



    </LinearLayout>

    </RelativeLayout>
</ScrollView>